Now kubeconfig is picked via filechooser. Ready to package the application

--- a/trial-screen.ui
+++ b/trial-screen.ui
@@ -68,6 +68,28 @@
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>606</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionLoad_Kubeconfig"/>
+   </widget>
+   <addaction name="menuFile"/>
+  </widget>
+  <action name="actionLoad_Kubeconfig">
+   <property name="text">
+    <string>Load Kubeconfig</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
